--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
+	"dependencies": {
+		"mysql2": "^3.16.0",
+		"sequelize": "^6.37.3",
+		"sequelize-typescript": "^2.1.6",
+		"uuid": "^11.0.2"
+	},
 	"devDependencies": {
 		"@types/node": "^22.3.0",
 		"@types/sequelize": "^4.28.20",
@@ -22,10 +28,5 @@
 		"ts-node": "^10.9.2",
 		"tsup": "^8.2.4",
 		"typescript": "^5.5.4"
-	},
-	"dependencies": {
-		"sequelize": "^6.37.3",
-		"sequelize-typescript": "^2.1.6",
-		"uuid": "^11.0.2"
 	}
 }
